🔨 Working Polynomial object
After comparing the results from the working getRoots method previously used, this confirms that this implementation works.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,20 @@
         {
             "type": "node",
             "request": "launch",
+            "name": "example-polynomial",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "program": "${workspaceFolder}/examples/example-polynomial.ts",
+            "runtimeArgs": ["-r", "ts-node/register", "-r", "tsconfig-paths/register"],
+            "console": "integratedTerminal",
+            "outFiles": [
+                "${workspaceFolder}/**/*.js"
+            ]
+        },
+        {
+            "type": "node",
+            "request": "launch",
             "name": "example-tyler",
             "skipFiles": [
                 "<node_internals>/**"
