--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,21 @@
     {
       "type": "node",
       "request": "launch",
+      "name": "example-shape",
+      "skipFiles": ["<node_internals>/**"],
+      "program": "${workspaceFolder}/examples/example-shape.ts",
+      "runtimeArgs": [
+        "-r",
+        "ts-node/register",
+        "-r",
+        "tsconfig-paths/register"
+      ],
+      "console": "integratedTerminal",
+      "outFiles": ["${workspaceFolder}/**/*.js"]
+    },
+    {
+      "type": "node",
+      "request": "launch",
       "name": "example-polynomial",
       "skipFiles": ["<node_internals>/**"],
       "program": "${workspaceFolder}/examples/example-polynomial.ts",
