--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.2",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "@types/svg-path-parser": "^1.1.3",
+    "svg-path-parser": "^1.1.0"
   }
 }
