💯 Updated spellcheck dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "Beziers",
         "bezout",
         "lerp",
-        "lerps"
+        "lerps",
+        "perp",
+        "startpoint"
     ]
 }
