🐛 Adding example for canvas in VS Code

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -48,6 +48,21 @@
       ],
       "console": "integratedTerminal",
       "outFiles": ["${workspaceFolder}/**/*.js"]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "example-canvas",
+      "skipFiles": ["<node_internals>/**"],
+      "program": "${workspaceFolder}/examples/example-canvas.ts",
+      "runtimeArgs": [
+        "-r",
+        "ts-node/register",
+        "-r",
+        "tsconfig-paths/register"
+      ],
+      "console": "integratedTerminal",
+      "outFiles": ["${workspaceFolder}/**/*.js"]
     }
   ]
 }
