--- a/package.json
+++ b/package.json
@@ -6,5 +6,7 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.2",
     "typescript": "^4.9.4"
-  }
+  },
+  "name": "tnor-shape",
+  "version": "0.0.1"
 }
